--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Policy Reaction Simulator</title>
+        <style>
+            body { font-family: sans-serif; }
+            label { display: block; }
+        </style>
     </head>
     <body>
         {% if messages %}
