--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,7 @@
 
     <form method="post">
         <p>
-            <label>Enter policy:</label>
+            <label>Policy:</label>
             <textarea cols="50" rows="5" name="policy"></textarea>
         </p>
         {% csrf_token %}
