--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -2,10 +2,32 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Policy Reaction Simulator</title>
         <style>
-            body { font-family: sans-serif; }
+            body { margin: 0; font-family: sans-serif; line-height: 1.3; }
+            main { max-width: 600px; margin: auto; padding: 0 16px; }
             label { display: block; }
+            nav a { color: blue; text-decoration: none; padding: 8px 16px; display: block; }
+            nav a:hover, .nav:hover { text-decoration: underline; }
+            small a { color: blue; text-decoration: none;}
+            small a:hover { text-decoration: underline; }
+            blockquote { margin: 0; }
+            @media (max-width: 420px) {
+                textarea { max-width: 100%; }
+            }
+
+            .persona {
+                border: 1px solid grey;
+                max-width: 500px;
+                margin-bottom: 16px;
+                padding: 8px;
+            }
+            .reaction {
+                border: 1px solid grey;
+                padding: 0 16px;
+                margin-bottom: 16px;
+            }
         </style>
     </head>
     <body>
