--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -8,7 +8,8 @@
             body { margin: 0; font-family: sans-serif; line-height: 1.3; }
             main { max-width: 600px; margin: auto; padding: 0 16px; }
             label { display: block; }
-            nav a { color: blue; text-decoration: none; padding: 8px 16px; display: block; }
+            nav { max-width: 600px; margin: auto; padding-top: 16px; }
+            nav a { color: blue; text-decoration: none; display: block; }
             nav a:hover, .nav:hover { text-decoration: underline; }
             small a { color: blue; text-decoration: none;}
             small a:hover { text-decoration: underline; }
@@ -16,7 +17,6 @@
             @media (max-width: 420px) {
                 textarea { max-width: 100%; }
             }
-
             .persona {
                 border: 1px solid grey;
                 max-width: 500px;
